--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-leap-day
+theme: jekyll-theme-minimal
 title: Delta Lab
 description: Escuela de Ingeniería Electromecánica - TEC
