--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-minimal
 title: Delta Lab
 description: Escuela de Ingeniería Electromecánica - TEC
-logo: ./images/prob3.jpg
+logo: /images/logo_2018_07.jpg
