--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 theme: jekyll-theme-minimal
 title: Delta Lab
 description: Escuela de Ingeniería Electromecánica - TEC
-logo: /images/logo_2018_07.jpg
+logo: ./images/logo_2018_07.png
+show_downloads: false
